force-app/main/default/objects/Zco_Call_Event__e/Zco_Call_Event__e.object-meta.xml
<CustomObject>
    <description>Workbook-defined call event platform event.</description>
    <label>Zco Call Event</label>
    <pluralLabel>Zco Call Event Events</pluralLabel>
</CustomObject>