force-app/main/default/objects/Zco_Call_Event__e/fields/Call_Id__c.field-meta.xml
<CustomField>
    <fullName>Call_Id__c</fullName>
    <label>Call Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>