force-app/main/default/objects/Zco_Call_Event__e/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <length>40</length>
    <type>Text</type>
</CustomField>