force-app/main/default/objects/Zco_Call_Event__e/fields/Recording_Url__c.field-meta.xml
<CustomField>
    <fullName>Recording_Url__c</fullName>
    <label>Recording URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>