force-app/main/default/objects/Zco_Call_Event__e/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <length>40</length>
    <type>Text</type>
</CustomField>